2017-July-31 Struan Robertson

		* Added MPIRelease configuration to VS 2015 project files.

		* Documentation update.

		* Copyright update.

2017-July-22 Struan Robertson

		* Added VS 2017 project files.

2017-July-02 Struan Robertson

		* System.cpp, ConditionsManger.cpp/.h: Updates to trace fitting to allow for parallel
		execution and output.

2017-July-02 Struan Robertson

		* Documentation and Makefile update for SimpleRRKM to RRKM keyword change.

		* System.cpp/.h: Minor changes in preparation for trace fitting.

		* TMatrix.h: Fix for Linux/MacOS build break.

		* LandauZenerCrossing.cpp, ZhuNakamuraCrossing.cpp, WKBCrossing.cpp: minor
		tidying of code in preparation for base class abstraction.

2017-June-29 Chris Morley
		* src/Rdouble.cpp, src/Rdouble.h: add UpdateDerivedVariables() which does not
		  write to XML
		* src/plugins/FittingUtils.cpp, src/plugins/gridsearch.cpp: call
		  UpdateDerivedVariables() when incrementing a range variable

2017-June-28 Chris Morley
		* schemas/CMLforMesmer.xsd, schemas/mesmer.xsd,src/Rdouble.cpp,src/Rdouble.h:
		Make "addAnd" an alternative for the attribute "addand".

2017-June-16 Chris Morley

		* Rename 'SimpleRRKM' xml keyword to 'RRKM', maintaining backward compatibility.
		* SimpleRRKM.cpp: Add a renamed plugin class instance and rename file to RRKM.cpp.

2017-June-1 Chris Morley

		* MesmerQA/cyclopropene isomerization reservoir state/baselines/Win32/mesmer.test:
		Use version with 2 digit exponents.

		* MesmerQA/QA.bat: Show mesmer commandline of each test. It's not clear to me why
		this information stopped being output, nor why I cannot get the version number to be 
		output without error.

		* src/main.cpp: Remove "Using x processes" message.

2017-May-29 Struan Robertson

		* ZhuNakamuraCrossing.cpp: Further refactoring. 

		* gdensityOfSates.cpp: Added warning regarding Hessian-coordinate consistency. 

		* Documentation update: Added warning regarding Hessian-coordinate consistency.