@@ -1,3 +1,7 @@
+2017-August-03 Struan Robertson
+
+		* ReactionManger.cpp, DiffusiveLossReaction.cpp/.h: Initial changes for diffusive loss term.
+
 2017-July-31 Struan Robertson
 
 		* Added MPIRelease configuration to VS 2015 project files.
